# solidity

./: CMakeLists.txt  Changelog.md
cmake/: EthCompilerSettings.cmake
docs/: abi-spec.rst  grammar.txt  types.rst
libdevcore/: CommonData.h
libevmasm/: Assembly.cpp  Assembly.h  JumpdestRemover.cpp  JumpdestRemover.h
liblll/: CodeFragment.cpp
libsolidity/: CMakeLists.txt
libsolidity/analysis/: Callgraph.h  CallgraphBuilder.cpp  CallgraphBuilder.h  TypeChecker.cpp
libsolidity/ast/: AST.cpp  AST.h  ASTJsonConverter.cpp  ASTJsonConverter.h  ExperimentalFeatures.h  Types.cpp  Types.h
libsolidity/codegen/: ABIFunctions.cpp  ABIFunctions.h
libsolidity/formal/: SMTChecker.cpp
libsolidity/interface/: ABI.cpp  CompilerStack.cpp  CompilerStack.h  StandardCompiler.cpp  StandardCompiler.h
libsolidity/parsing/: Parser.cpp
scripts/: install_deps.sh
solc/: CommandLineInterface.cpp
test/liblll/: EndToEndTest.cpp
test/libsolidity/: SolidityEndToEndTest.cpp  SolidityNameAndTypeResolution.cpp  StandardCompiler.cpp
